Clarify scatter plot title

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -54,7 +54,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "import numpy as np"
    ]
   },
   {
@@ -207,16 +208,22 @@
     "    da = ds[var]\n",
     "\n",
     "    if \"lat\" in ds and \"lon\" in ds and \"feature_id\" in da.dims:\n",
-    "        n = min(50000, da.sizes.get(\"feature_id\", 0))\n",
+    "        n = min(75000, da.sizes.get(\"feature_id\", 0))\n",
     "        lat = ds[\"lat\"].isel(feature_id=slice(0, n)).values\n",
     "        lon = ds[\"lon\"].isel(feature_id=slice(0, n)).values\n",
     "        vals = da.isel(feature_id=slice(0, n)).values\n",
-    "        plt.figure(figsize=(9, 6))\n",
-    "        sc = plt.scatter(lon, lat, c=vals, cmap=\"viridis\", s=2, linewidths=0)\n",
-    "        plt.colorbar(sc, label=var)\n",
+    "        mask = np.isfinite(lat) & np.isfinite(lon) & np.isfinite(vals)\n",
+    "        lat, lon, vals = lat[mask], lon[mask], vals[mask]\n",
+    "        if vals.size == 0:\n",
+    "            raise ValueError(\"No finite values to plot.\")\n",
+    "        vmin = np.nanpercentile(vals, 2)\n",
+    "        vmax = np.nanpercentile(vals, 98)\n",
+    "        plt.figure(figsize=(10, 7))\n",
+    "        sc = plt.scatter(lon, lat, c=vals, cmap=\"plasma\", s=2, linewidths=0, vmin=vmin, vmax=vmax)\n",
+    "        plt.colorbar(sc, label=f\"{var} (clipped 2–98th pct)\")\n",
     "        plt.xlabel(\"Longitude\")\n",
     "        plt.ylabel(\"Latitude\")\n",
-    "        plt.title(f\"{var} (first {n} points)\")\n",
+    "        plt.title(f\"{var} across reaches (first {n} points)\")\n",
     "    else:\n",
     "        # Fallback to a 1D slice if lat/lon are not present\n",
     "        sliced = da\n",
