Generate and display per-variable hydrology plots

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -195,18 +195,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_sample(ds: xr.Dataset, output: Path) -> Path:\n",
-    "    \"\"\"Make a small, colorful 2D scatter using lat/lon and a meaningful variable.\"\"\"\n",
-    "    preferred = [\"So\", \"TopWdth\", \"TopWdthCC\", \"order\", \"Qi\", \"nCC\"]\n",
-    "    var = next((v for v in preferred if v in ds), None)\n",
-    "    if not var:\n",
-    "        # fallback to first numeric\n",
-    "        numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
-    "        if not numeric_vars:\n",
-    "            raise ValueError(\"No numeric variables found to plot.\")\n",
-    "        var = numeric_vars[0]\n",
+    "def plot_variable(ds: xr.Dataset, var: str, output: Path) -> Path:\n",
+    "    \"\"\"Make a small, colorful 2D scatter using lat/lon for the requested variable.\"\"\"\n",
     "    da = ds[var]\n",
-    "\n",
     "    if \"lat\" in ds and \"lon\" in ds and \"feature_id\" in da.dims:\n",
     "        n = min(75000, da.sizes.get(\"feature_id\", 0))\n",
     "        lat = ds[\"lat\"].isel(feature_id=slice(0, n)).values\n",
@@ -256,7 +247,16 @@
     "print(f\"Selected dataset: {selected.get('id')}\")\n",
     "local_path = download_dataset(selected)\n",
     "ds = inspect_dataset(local_path)\n",
-    "plot_sample(ds, Path(\"plot.png\"))"
+    "preferred = [\"So\", \"TopWdth\", \"TopWdthCC\", \"order\", \"Qi\", \"nCC\"]\n",
+    "plotted_any = False\n",
+    "for var in preferred:\n",
+    "    if var in ds:\n",
+    "        plot_variable(ds, var, Path(f\"plot_{var.lower()}.png\"))\n",
+    "        plotted_any = True\n",
+    "if not plotted_any:\n",
+    "    numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
+    "    if numeric_vars:\n",
+    "        plot_variable(ds, numeric_vars[0], Path(\"plot_numeric.png\"))"
    ]
   }
  ],
