Update portal analysis notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2fd5dc8",
+   "id": "9e2fe11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd206dd",
+   "id": "75fc0e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd9b19ef",
+   "id": "03fed171",
    "metadata": {},
    "source": [
     "# 3 - Explore portal data from JupyterHub\n",
@@ -33,6 +33,7 @@
     "- Falls back to a local NetCDF if `LOCAL_NETCDF` is set or the portal is unreachable.\n",
     "- Downloads the chosen file (if not local), opens it with xarray, prints metadata, and saves a quick 2D scatter plot (lat/lon colored by a data variable).\n",
     "- Kept in sync with the notebook via Jupytext (`ipynb` and `py:percent`).\n",
+    "- Executed notebook output: https://gist.github.com/zonca/110eface6429e7b91160f893c214417c\n",
     "\n",
     "Configure at the top of the notebook:\n",
     "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (inside the cluster use `http://toy-portal.portal.svc.cluster.local`; from outside use the portal external IP like `http://35.x.x.x`).\n",
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0c630db",
+   "id": "efdbe74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b168b5",
+   "id": "23bb4771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c02857",
+   "id": "f12c5383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e02d3e",
+   "id": "329433e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29808761",
+   "id": "a04844a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5028edc7",
+   "id": "dcf1fcea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b86039",
+   "id": "e8c900c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +222,7 @@
     "        for dim in da.dims:\n",
     "            sliced = sliced.isel({dim: slice(0, min(50, da.sizes[dim]))})\n",
     "        squeezed = sliced.squeeze()\n",
-    "        ax = squeezed.plot(figsize=(8, 4))\n",
+    "        squeezed.plot(figsize=(8, 4))\n",
     "        plt.title(f\"Sample of '{var}'\")\n",
     "\n",
     "    plt.tight_layout()\n",
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6373355",
+   "id": "cd885f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,10 +269,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
